apps/web/src/styles/globals.css
@import url("@dotkomonline/config/tailwind.css");
@import url("@dotkomonline/config/typography.css");

@layer base {
  html {
    font-size: 14px;
  }

  html,
  body,
  #__next {
    @apply h-full w-full bg-indigo-1;
  }

  body {
    @apply m-0;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }
}

